add metrics for jdbc sink